--- a/mirah-compiler-tools/pom.xml
+++ b/mirah-compiler-tools/pom.xml
@@ -28,11 +28,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mirah</groupId>
-            <artifactId>mirah-complete</artifactId>
-            <version>0.1.4-SNAPSHOT</version>
+            <groupId>ca.weblite</groupId>
+            <artifactId>mirah</artifactId>
+            <version>0.1.4</version>
         </dependency>
-      
+        <dependency>
+            <groupId>ca.weblite</groupId>
+            <artifactId>mirahc</artifactId>
+            <version>0.1.4</version>
+        </dependency>
         <dependency>
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
@@ -42,4 +46,12 @@
         </dependency>
    
     </dependencies>
+    <repositories>
+        <!--other repositories if any-->
+        <repository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/repo</url>
+        </repository>
+    </repositories>
 </project>
